--- a/index.html
+++ b/index.html
@@ -37,20 +37,21 @@
     <!-- <script src="js/06-app.js"></script>  -->
     <!-- <script src="js/07-app.js"></script>  -->
     <!-- <script src="js/08-app.js"></script>  -->
-    <script src="js/09-app.js"></script> 
+    <!-- <script src="js/09-app.js"></script>  -->
 <!-- Array Methods -->
-<!--  <script src="js/10-app.js"></script>  -->
+ <!-- <script src="js/10-app.js"></script>  -->
 <!--  <script src="js/11-app.js"></script> -->
-<!--  <script src="js/12-app.js"></script>  -->
+ <!-- <script src="js/12-app.js"></script>  -->
+<!--  <script src="js/12-app-01.js"></script>  --> 
 <!--  <script src="js/13-app.js"></script>  -->
  <!-- <script src="js/13-app_01.js"></script>  -->
 <!--  <script src="js/14-app.js"></script>  -->
 <!--  <script src="js/15-app.js"></script>  -->
 <!-- EJERCICIOS -->
-<!--  <script src="js/99-app.js"></script>  -->
- <!-- <script src="js/99-app-01.js"></script> --> 
- <!-- <script src="js/99-app-02.js"></script>  -->
-<!--  <script src="js/99-app-03.js"></script> --> 
+ <!-- <script src="js/99-app.js"></script>  -->
+<!--  <script src="js/99-app-01.js"></script>  -->
+ <script src="js/99-app-02.js"></script> 
+ <!-- <script src="js/99-app-03.js"></script>  -->
 
     
 </body>
